--- a/TodoApp/wwwroot/index.html
+++ b/TodoApp/wwwroot/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo App</title>
 
+  <link rel="shortcut icon" href="favicon.svg" type="image/svg">
   <link rel="stylesheet" href="style.css">
+
+  <title>Todo App</title>
   <script defer src="main.js"></script>
 </head>
 <body>
