--- a/TodoApp/wwwroot/index.html
+++ b/TodoApp/wwwroot/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
 
   <title>Todo App</title>
-  <script defer src="main.js"></script>
+  <script type="module" src="create.js"></script>
+  <script type="module" src="api.js"></script>
+  <script defer type="module" src="main.js"></script>
 </head>
 <body>
   <header>
@@ -22,6 +24,7 @@
 
     <section>
       <h2>List of Todos</h2>
+      <ul id="todoes"></ul>
     </section>
   </main>
 
