setup todo form

--- a/TodoApp/wwwroot/index.html
+++ b/TodoApp/wwwroot/index.html
@@ -20,6 +20,13 @@
   <main>
     <section>
       <h2>Todo Input</h2>
+
+      <form id="todoForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br>
+    
+        <button type="submit">Add</button>
+      </form>
     </section>
 
     <section>
