--- a/TodoApp/wwwroot/index.html
+++ b/TodoApp/wwwroot/index.html
@@ -23,7 +23,7 @@
 
       <form id="todoForm">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br>
+        <input type="text" id="name" name="name" autocomplete="off" required><br>
     
         <button type="submit">Add</button>
       </form>
