setup basic rendering and quering of tododata

--- a/TodoApp/wwwroot/index.html
+++ b/TodoApp/wwwroot/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="style.css">
 
   <title>Todo App</title>
-  <script type="module" src="create.js"></script>
-  <script type="module" src="api.js"></script>
+  <script defer type="module" src="utilis.js"></script>
+  <script defer type="module" src="todolist.js"></script>
+  <script defer type="module" src="api.js"></script>
   <script defer type="module" src="main.js"></script>
 </head>
 <body>
@@ -27,6 +28,9 @@
     
         <button type="submit">Add</button>
       </form>
+
+      <button id="IdAscending">Ascending</button>
+      <button id="IdDescending">Descending</button>
     </section>
 
     <section>
